# skill-sheet-maker

./: .eslintrc.js  .gitignore  README.md  create_issues.py  index.html  package-lock.json  package.json  tailwind.config.ts  tasks.md  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  create_issues.yml
db/: init_db.js  schema.sql
migrations/: 20250701080655_init_schema.sql  20250707072109_change_all_schema.sql  20250708080118_drop_serial_and_nake_composite_pk_on_career_processes.sql  20250708083238_change_master_process_to_serial.sql  20250708093504_change_some_schema.sql
public/reference/: devicon.json  skill.md
scripts/: generate-insert-dummy-users.cjs  generate-qualification-inserts.cjs  generate-skill-inserts.cjs  generate_insert-dummy-career-histories.cjs
sql/: drop_tables.sql  insert_dummy_career_histories.sql  insert_dummy_user_qualifications.sql  insert_dummy_user_skills.sql  insert_dummy_users.sql  insert_qualifications.sql  insert_skills.sql
src/: App.tsx  main.tsx
src-tauri/: .env  Cargo.toml  rustfmt.toml  sqlx-data.json  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: career_histories.rs  career_processes.rs  career_skills.rs  master_processes.rs  mod.rs  qualifications.rs  skills.rs  stats.rs  user.rs  user_qualifications.rs  user_skills.rs  users.rs
src-tauri/src/db/: career_histories.rs  career_processes.rs  career_skills.rs  master_processes.rs  mod.rs  models.rs  pool.rs  qualifications.rs  repo.rs  skills.rs  user_qualifications.rs  user_skills.rs  users.rs
src/app/: Layout.tsx
(+36 files in other folders)
