[package]
name = "orbit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "macros", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.98"
dotenvy = "0.15.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
